Fix: Elements going out of view on smaller screens
Fix scrolling patterns to allow for seeing larger texts even when it
ovreflows.
Fix padding on top and bottom.
Fix the display side of the user profile menu depending on the screen
size.
Move the triggger for the user menu to be part of the navbar.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,7 @@ body {
     font-size: 16px;
     font-weight: 300;
     color: var(--foreground);
-    scrollbar-gutter: stable;
+    scrollbar-gutter: stable both-edges;
     scrollbar-width: thin;
     scrollbar-color: var(--foreground) transparent;
     scroll-behavior: smooth;
